Fixed dropdown z-index ssue in waldorf

--- a/app/assets/stylesheets/_core/_nav.sass
+++ b/app/assets/stylesheets/_core/_nav.sass
@@ -263,7 +263,7 @@
   padding: 20px 10px 10px
   right: 0px
   top: 25px
-  z-index: 1
+  z-index: 10
 
 .nav__submenu__content
   @include border-radius(5)
